# ChangeLog for dev-perl/perltidy
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/ChangeLog,v 1.44 2009/06/21 10:28:05 tove Exp $

*perltidy-20090616 (21 Jun 2009)

  21 Jun 2009; Torsten Veller <tove@gentoo.org> +perltidy-20090616.ebuild:
  Version bump

  01 May 2009; Torsten Veller <tove@gentoo.org> -perltidy-20070508.ebuild:
  Cleanup

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> perltidy-20071205.ebuild:
  Marked ppc stable for bug #261760.

  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> perltidy-20071205.ebuild:
  ia64 stable wrt #261760

  11 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  perltidy-20071205.ebuild:
  Stable on alpha, bug #261760

  09 Mar 2009; Ferris McCormick <fmccor@gentoo.org>
  perltidy-20071205.ebuild:
  Sparc stable, Bug #261760.

  09 Mar 2009; Markus Meier <maekke@gentoo.org> perltidy-20071205.ebuild:
  amd64/x86 stable, bug #261760

  08 Mar 2009; Torsten Veller <tove@gentoo.org> perltidy-20071205.ebuild:
  EAPI=2, remove mymake, cleanup

  01 Aug 2008; Torsten Veller <tove@gentoo.org> -perltidy-20031021.ebuild,
  -perltidy-20060719.ebuild, -perltidy-20070424.ebuild:
  Cleanup

*perltidy-20071205 (01 Aug 2008)

  01 Aug 2008; Torsten Veller <tove@gentoo.org> +perltidy-20071205.ebuild:
  Version bump

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> perltidy-20070508.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perltidy-20070508.ebuild:
  Stable on ppc.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> perltidy-20070508.ebuild:
  alpha/ia64/x86 stable

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  perltidy-20070508.ebuild:
  Marking sparc stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  perltidy-20070424.ebuild:
  Marking sparc stable

*perltidy-20070508 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +perltidy-20070508.ebuild:
  Version bump
