@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/Attic/perltidy-20090616.ebuild,v 1.1 2009/06/21 10:28:05 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/Attic/perltidy-20090616.ebuild,v 1.2 2010/01/10 20:00:05 grobian Exp $
 
 EAPI=2
 
@@ -15,7 +15,7 @@ HOMEPAGE="http://perltidy.sourceforge.net/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
 IUSE=""
 
 SRC_TEST="do"
