@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/Attic/prefork-1.04.ebuild,v 1.8 2009/10/28 17:55:27 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/Attic/prefork-1.04.ebuild,v 1.9 2010/01/10 20:01:31 grobian Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ inherit perl-module
 DESCRIPTION="Optimized module loading for forking or non-forking processes"
 
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ~mips ppc sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 ~mips ppc sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE=""
 
 DEPEND=">=virtual/perl-File-Spec-0.80
