@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/perltidy
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/ChangeLog,v 1.44 2009/06/21 10:28:05 tove Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/ChangeLog,v 1.45 2010/01/10 20:00:05 grobian Exp $
+
+  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> perltidy-20090616.ebuild:
+  Transfer Prefix keywords
 
 *perltidy-20090616 (21 Jun 2009)
 
